--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/estilo.css" />
+    <link rel="stylesheet" href="./assets/css/normalize.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Document</title>
-</head>
-<body>
-    <hr>
-    <h1>Conversor de monedas</h1>
-    <hr>
-    <input type="Number" id="inputPesos">
-    <div>
-        <select name="" id="select_coin">
-            <option value="" disabled selected>-- Selecciona una moneda --</option>
-        </select>
+  </head>
+  <body>
+    <div class="container">
+      <div class="subcontainer">
+        <h1>Conversor de monedas</h1>
+
+        <input type="Number" id="inputPesos" />
+        <div>
+          <select name="" id="select_coin">
+            <option value="" disabled selected>
+              -- Selecciona una moneda --
+            </option>
+          </select>
+        </div>
+        <button id="search" class="btn">Buscar</button>
+        <div id="answerDivisa"></div>
+      </div>
+
     </div>
-    <button id="search">Buscar</button>
-    <div id="answerDivisa"></div>
-
-
-    <div>
+      <div class="grafico">
         <canvas id="chart"></canvas>
-    </div>
-
-
+      </div>
+    
 
     <script src="./assets/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-
-</body>
+  </body>
 </html>
